--- a/ui/PassWrite.ui
+++ b/ui/PassWrite.ui
@@ -6,20 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>330</width>
-    <height>221</height>
+    <width>329</width>
+    <height>245</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Password</string>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <property name="margin">
-    <number>8</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout">
      <property name="spacing">
@@ -98,17 +92,11 @@
      <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QGridLayout">
-      <property name="margin">
-       <number>8</number>
-      </property>
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <item row="1" column="0">
-       <widget class="QLabel" name="repeatLabel">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
         <property name="text">
-         <string>Repeat password</string>
+         <string>Password</string>
         </property>
        </widget>
       </item>
@@ -119,6 +107,13 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="repeatLabel">
+        <property name="text">
+         <string>Repeat password</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="passB">
         <property name="echoMode">
@@ -126,10 +121,13 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
+      <item row="2" column="0" colspan="2">
+       <widget class="QCheckBox" name="takeHex">
+        <property name="toolTip">
+         <string>The password is parsed as 2-digit hex code. It must have an equal number of digits (0-9 and a-f)</string>
+        </property>
         <property name="text">
-         <string>Password</string>
+         <string>Take as HEX string</string>
         </property>
        </widget>
       </item>
