--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -5,20 +5,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>499</width>
-    <height>539</height>
+    <width>547</width>
+    <height>599</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="spacing" >
-    <number>6</number>
-   </property>
-   <property name="margin" >
-    <number>9</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_2" >
    <item>
     <layout class="QHBoxLayout" >
      <property name="spacing" >
@@ -85,7 +79,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget" >
      <property name="currentIndex" >
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tab_0" >
       <attribute name="title" >
@@ -626,9 +620,6 @@ If this list is disabled, you only can create a self-signed certificate.</string
           </item>
           <item>
            <widget class="QPushButton" name="genKeyBut" >
-            <property name="toolTip" >
-             <string>This funny button creates a key. Go figure.</string>
-            </property>
             <property name="text" >
              <string>&amp;Generate a new key</string>
             </property>
@@ -643,13 +634,7 @@ If this list is disabled, you only can create a self-signed certificate.</string
       <attribute name="title" >
        <string>Extensions</string>
       </attribute>
-      <layout class="QVBoxLayout" >
-       <property name="spacing" >
-        <number>6</number>
-       </property>
-       <property name="margin" >
-        <number>9</number>
-       </property>
+      <layout class="QVBoxLayout" name="verticalLayout" >
        <item>
         <layout class="QHBoxLayout" >
          <property name="spacing" >
@@ -811,25 +796,29 @@ It also copies the issuer and serial number from the issuer certificate. Normall
        </item>
        <item>
         <widget class="QWidget" native="1" name="timewidget" >
-         <layout class="QHBoxLayout" >
+         <property name="enabled" >
+          <bool>true</bool>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout" >
           <property name="spacing" >
-           <number>6</number>
+           <number>-1</number>
           </property>
           <property name="margin" >
-           <number>9</number>
+           <number>0</number>
           </property>
           <item>
            <widget class="QGroupBox" name="validityBox" >
             <property name="title" >
              <string>Validity</string>
             </property>
-            <layout class="QGridLayout" >
-             <property name="margin" >
-              <number>8</number>
-             </property>
-             <property name="spacing" >
-              <number>6</number>
-             </property>
+            <layout class="QGridLayout" name="gridLayout" >
+             <item row="0" column="0" >
+              <widget class="QLabel" name="TextLabel1_2_3_2" >
+               <property name="text" >
+                <string>Not before</string>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="1" >
               <widget class="Validity" name="notBefore" >
                <property name="displayFormat" >
@@ -840,6 +829,13 @@ It also copies the issuer and serial number from the issuer certificate. Normall
                </property>
                <property name="timeSpec" >
                 <enum>Qt::UTC</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" >
+              <widget class="QLabel" name="TextLabel2_4_2" >
+               <property name="text" >
+                <string>Not after</string>
                </property>
               </widget>
              </item>
@@ -856,20 +852,6 @@ It also copies the issuer and serial number from the issuer certificate. Normall
                </property>
               </widget>
              </item>
-             <item row="0" column="0" >
-              <widget class="QLabel" name="TextLabel1_2_3_2" >
-               <property name="text" >
-                <string>Not before</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0" >
-              <widget class="QLabel" name="TextLabel2_4_2" >
-               <property name="text" >
-                <string>Not after</string>
-               </property>
-              </widget>
-             </item>
             </layout>
            </widget>
           </item>
@@ -878,19 +860,9 @@ It also copies the issuer and serial number from the issuer certificate. Normall
             <property name="title" >
              <string>Time range</string>
             </property>
-            <layout class="QGridLayout" >
-             <property name="margin" >
-              <number>8</number>
-             </property>
-             <property name="spacing" >
-              <number>6</number>
-             </property>
-             <item row="1" column="1" >
-              <widget class="QPushButton" name="applyTime" >
-               <property name="text" >
-                <string>Apply</string>
-               </property>
-              </widget>
+            <layout class="QGridLayout" name="gridLayout_2" >
+             <item row="0" column="0" >
+              <widget class="QLineEdit" name="validNumber" />
              </item>
              <item row="0" column="1" >
               <widget class="QComboBox" name="validRange" >
@@ -911,6 +883,19 @@ It also copies the issuer and serial number from the issuer certificate. Normall
                </item>
               </widget>
              </item>
+             <item row="0" column="2" >
+              <widget class="QPushButton" name="applyTime" >
+               <property name="sizePolicy" >
+                <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text" >
+                <string>Apply</string>
+               </property>
+              </widget>
+             </item>
              <item row="1" column="0" >
               <widget class="QCheckBox" name="midnightCB" >
                <property name="toolTip" >
@@ -921,8 +906,12 @@ It also copies the issuer and serial number from the issuer certificate. Normall
                </property>
               </widget>
              </item>
-             <item row="0" column="0" >
-              <widget class="QLineEdit" name="validNumber" />
+             <item row="1" column="1" colspan="2" >
+              <widget class="QCheckBox" name="noWellDefinedExpDate" >
+               <property name="text" >
+                <string>No well-defined expiration</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
