add new Token-features
- replace occurances of "Smart Card" by "Token"
 - Support for creating keys on a token
 - Store existing keys on a token
 - delete keys and certs from a token
 - update docs

--- a/ui/KeyDetail.ui
+++ b/ui/KeyDetail.ui
@@ -110,7 +110,7 @@
    <item>
     <widget class="QGroupBox" name="cardBox">
      <property name="title">
-      <string>Smart card</string>
+      <string>Security token</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
